2008-02-09 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.c (assignToSameBank): add force argument to ignore
	  artificial bank size limits for compound data (structs, arrays),
	  avoids assert if --obanksel=N, N > 1, is given

2009-02-09 Borut Razem <borut.razem AT siol.net>

	* as/asranlib/asranlib.c, link/lkar.c: don't check the padding bytes since
	  the openSUSE GNU ar (GNU Binutils; openSUSE 11.0) 2.18.50.20080409-11.1
	  uses '`' character instead '\n' for padding
	* as/asranlib/asranlib.c: made it more robust

2009-02-08 Borut Razem <borut.razem AT siol.net>

	* as/COPYING3: added
	* support/scripts/sdcc.nsi: added COPYING3.txt to the package
	* device/lib/Makefile.in: reenable floating point in model-xstack-auto
	  libraries

2009-02-07 Borut Razem <borut.razem AT siol.net>

	* as/asranlib/asranlib.c: fixed BSD header length calculation
	* .version, doc/sdccman.lyx: bumped sdcc version to 2.8.9
	  due sdcc asxxxx license change to GPLv3

2009-02-05 Borut Razem <borut.razem AT siol.net>

	* as/asranlib/asranlib.c, link/lkar.h, link/lkar.c:
	  added support for BSD (Mac OS X) ar format
	* as/asxxsrc/aslex.c, as/as/asxxsrc/asnoice.c, as/as/asxxsrc/assym.c,
	  as/as/hc08/asdata.c, as/hc08/asexpr.c, as/hc08/aslist.c,
	  as/hc08/asm.h, as/hc08/asmain.c, as/hc08/asout.c, as/hc08/assubr.c,
	  as/hc08/m08adr.c, as/hc08/m08ext.c, as/hc08/m08mch.c,
	  as/hc08/m08pst.c, as/hc08/m6808.h, as/link/aslink.h,
	  as/link/hc08/lkarea.c, as/link/hc08/lkelf.c, as/link/hc08/lkihx.c,
	  as/link/hc08/lkmain.c, as/link/hc08/lkmem.c, as/link/hc08/lkrloc.c,
	  as/link/hc08/lks19.c, as/link/lkaomf51.c, as/link/lkdata.c,
	  as/link/lkeval.c, as/link/lkhead.c, as/link/lklex.c, as/link/lklib.c,
	  as/link/lklibr.c, as/link/lklibr.h, as/link/lklist.c,
	  as/link/lknoice.c, as/link/lkrel.c, as/link/lkrel.h,
	  as/link/lksdcclib.c, as/link/lkstore.c, as/link/lksym.c,
	  as/link/mcs51/lkarea.c, as/link/mcs51/lkihx.c,
	  as/link/mcs51/lkmain.c, as/link/mcs51/lkmem.c,